[package]
name = "phoenix"
version = "0.1.0"
authors = ["Sonny Scroggin <scrogson@gmail.com>"]
repository = "https://github.com/scrogson/phoenix-rs"
description = "Rust client for Phoenix channels"
license = "MIT"

[dependencies]
chrono = "0.2.25"
websocket = "0.17"
rustc-serialize = "0.3"
timer = "0.1.6"
